platform/kubernetes/base/analytics-service/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: analytics-service-ingress
  namespace: shopsphere-apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: analytics-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api-gateway
      ports:
        - protocol: TCP
          port: 8000
    - from:
        - namespaceSelector:
            matchLabels:
              shopsphere.io/tier: monitoring
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: customer-service
      ports:
        - protocol: TCP
          port: 8000
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: catalogue-service
      ports:
        - protocol: TCP
          port: 8000
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: order-service
      ports:
        - protocol: TCP
          port: 8000
    - to:
        - namespaceSelector:
            matchLabels:
              shopsphere.io/tier: monitoring
      ports:
        - protocol: TCP
          port: 4318
        - protocol: TCP
          port: 9090
    - to:
        - namespaceSelector:
            matchLabels:
              shopsphere.io/tier: platform
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
